--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "side-channel": "^1.0.6",
     "statuses": "^2.0.1",
     "stream": "^0.0.2",
+    "telnet": "^0.0.1",
     "telnet-client": "^2.2.0",
     "toidentifier": "^1.0.1",
     "type-is": "^1.6.18",
